style: improved the appearance of personal-profile, ranking-page, and post-details; add the logo of the navigation bar and the webpage title icon.

--- a/app/static/css/new-discussion.css
+++ b/app/static/css/new-discussion.css
@@ -34,10 +34,16 @@ main {
     height: 47px;
 }
 
-#editor {
+#body {
     height: 220px;
 }
 
 .postbtn {
     text-align: center;
+}
+
+.new-ava {
+    width: 75px;
+    height: 75px;
+    border: rgba(0, 0, 0, 0.2) 2.5px solid;
 }
