--- a/app/static/css/personal-profile.css
+++ b/app/static/css/personal-profile.css
@@ -8,6 +8,14 @@
 .self-intro{
     margin-top: 3.5rem; 
     padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+@media (max-width: 991px) {
+    .self-intro{
+        margin-top: 12rem; 
+        padding-top: 1rem;
+    }
 }
 
 .list-style-none{
@@ -18,6 +26,31 @@
     background-color: #e0dcda;
 }
 
-.hover-orange:hover{
-    color: orange;
+.hover-orange:hover {
+    color: orange!important;
+}
+
+.title-ava {
+    width: 110px;
+    height: 110px;
+    border: 4px solid #fff;
+  
+}
+
+@media (max-width: 970px) {
+    .personal-details {
+        margin-left: 2rem;
+    }
+}
+
+.discussion-list li {
+    padding: 20px 15px 15px 15px;
+    border-bottom: 1px solid #9f9f9f24;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+.discussion-list li:hover {
+    background-color: #9f9f9f24;
+    transition: all 0.2s ease-in-out;
 }
