--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" />
+    <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='/img/4601715751654_.pic.jpg') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     {% block style %}{% endblock %}
 </head>
@@ -18,11 +19,11 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 mx-3 text-white text-decoration-none">
-                    <img alt="logo" src="https://placehold.co/133x40" class="rounded" />
+                    <img alt="logo" src="{{ url_for('static', filename='img/4501715747379_.pic.jpg') }}" class="rounded logo" />
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
-                    <li><a href="ranking-page" class="nav-link px-2 text-white">Rankings</a></li>
+                    <li><a href="{{ url_for('rankingPage') }}" class="nav-link px-2 text-white">Rankings</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" method="get" action="{{ url_for('search') }}">
@@ -36,8 +37,8 @@
                     {% if current_user.is_authenticated %}
                     <div class="user-info">
                         <span class="text-light me-3">Welcome, <a href="{{ url_for('personalProfile') }}">{{ current_user.username }}</a></span>
-                        <span class="text-light me-3">Credits: {{ current_user.credit }}</span>
-                        <a class="btn btn-warning" href="{{ url_for('logout') }}">Log Out</a>
+                        <span class="text-light me-3"><i class="bi bi-award-fill"></i> {{ current_user.credit }}</span>
+                        <a class="btn btn-warning bg-gradient" href="{{ url_for('logout') }}">Log Out</a>
                     </div>                    
                     {% else %}
                     <button type="button" id="loginButton" class="btn btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#ModalToggle">Login</button>
