--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
             <ul class="nav flex-column mt-4 mx-5">
                 {% for category in categories %}
                 <li class="nav-item mb-1">
-                    <a class="nav-link text-secondary" href="?category={{ category.id }}">
+                    <a class="nav-link text-secondary hover-orange" href="?category={{ category.id }}">
                         <i class="{{ category.iconClass }}"></i>
                         <span class="Button-label">{{ category.name }}</span>
                     </a>
@@ -42,7 +42,7 @@
                 </ul>
             </div>
             {% if paginate.total == 0 %}
-            <h4 class="text-center mt-4" role="alert">
+            <h4 class="text-center mt-4 text-secondary" role="alert">
                 No discussions found.
             </h4>
             {% else %}
@@ -53,7 +53,7 @@
                     <div class="row clearfix">
                         <div class="col-md-10 column row clearfix">
                             <div class="col-md-1 column">
-                                <img alt="50x50" src='https://placehold.co/50x50' class="rounded-circle"
+                                <img alt="Avatar" src='https://robohash.org/{{ post.author.email }}' class="rounded-circle"
                                     style="width: 50px; height: 50px;" />
                             </div>
 
@@ -77,7 +77,7 @@
                         <div class="col-md-2 column">
                             <div class="row clearfix">
                                 <div class="col-md-6 column">
-                                    <span class="badge bg-info">{{ post.tag }}</span>
+                                    <span class="badge category-tag" data-category-id="{{ post.category.id }}">{{ post.category.name }}</span>
                                 </div>
                                 <div class="col-md-6 column text-secondary">
                                     <p>
@@ -114,7 +114,7 @@
 
 
 {% block script %}
-<!-- <script src="{{ url_for('static', filename='js/index.js') }}"></script> -->
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         {% for post in paginate.items %}
@@ -132,5 +132,4 @@
         {% endfor %}
     });
 </script>
-
 {% endblock %}
