style: add search icon, fix the case of 0 posts user

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" method="get" action="{{ url_for('search') }}">
                     <div class="input-group">
                         <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search" name="search_keywords">
-                        <button class="btn btn-outline-light" type="submit">
+                        <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i>
                         </button>
                     </div>
                 </form>
