--- a/app/templates/new-discussion.html
+++ b/app/templates/new-discussion.html
@@ -60,7 +60,7 @@
                                             $('#resultMessage').html('<div class="alert alert-success" role="alert">Posted successfully!</div>');
                                             // go to the discussion page
                                             setTimeout(function () {
-                                                window.location.href = '/discussion/' + response.post_id;
+                                                window.location.href = '/post-details/' + response.post_id;
                                             }, 1000);
 
                                         } else {
