--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -12,6 +12,7 @@
 
 {% block style %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/post-details.css') }}">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 {% endblock %}
 
 
@@ -64,6 +65,25 @@
                             &nbsp;
                             <i class="bi bi-chat-left-quote"></i>
                             {{comment.author.username}}</h5>
+                        <div class="text-muted"><span id="humanTimestamp_{{ comment.id }}"></span> Published</div>
+
+                        <script>
+                            $(document).ready(function () {           
+                                var timestamp_{{ comment.id }} = '{{ comment.timestamp }}';
+                                var momentTimestamp_{{ comment.id }} = moment(timestamp_{{ comment.id }});
+                                var now = moment();
+                                var diffInHours_{{ comment.id }} = now.diff(momentTimestamp_{{ comment.id }}, 'hours');
+                                var element_{{ comment.id }} = document.getElementById('humanTimestamp_{{ comment.id }}');
+                                                        
+                                if (diffInHours_{{ comment.id }} < 24) {
+                                    element_{{ comment.id }}.textContent = momentTimestamp_{{ comment.id }}.fromNow();
+                                } else {
+                                    element_{{ comment.id }}.textContent = momentTimestamp_{{ comment.id }}.format('YYYY-MM-DD HH:mm:ss');
+                                }
+
+                            });
+                        </script>
+
                         <div class="author-content p-3 mt-2 text-muted" style="max-width: 90%; overflow-y: auto;">
                             <p>{{ comment.body }}</p>
                         </div>
@@ -80,23 +100,7 @@
                     <div class="col-md-2"></div>
                 </div>
                 {% endif %}
-                <div class="row mt-5 mb-5">
-                    <div class="col-md-1 offset-md-2">
-                        <img alt="Avatar" src='https://robohash.org/{{ user.email }}' class="rounded-circle" style="width: 50px; height: 50px; border: rgba(0, 0, 0, 0.2) 1.5px solid;" />
-                    </div>
-                    <div class="col-md-9">
-                        <h3><i class="bi bi-chat-left-quote"></i></h3>
-                        <!-- <h5 class="--bs-danger-bg-subtle">{{user.username}}</h5> -->
-                        <div class="author-content p-3 mt-2 text-muted" style="max-width: 90%; overflow-y: auto;">
-                            <p>Click the button to leave your reply ...</p>
-                        </div>
-                        <div class="col-12 col-md-3 column">
-                            <button type="button" class="btn btn-secondary bg-gradient text-white px-3 mx-5 newreplybtn" data-bs-toggle="modal" data-bs-target="#ModalReply" id="newpostpageBtn">Reply
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-2"></div>
-                </div>
+
 
                     <!-- <div class="col-12 col-md-9 offset-md-3">
                         <div class="comment-content p-3  mt-2" style="max-width: 90%; overflow-y: auto;">
@@ -139,27 +143,47 @@
                                 <button type="button" class="btn btn-secondary bg-gradient mb-2" id="commentBtn">Submit Comment</button>
                             </div>
                         </form>
+
+                        <script>
+                            $(document).ready(function () {
+                                $('#commentBtn').click(function () {
+
+                                    var body = $('#comment-body').val();
+                                    var url = window.location.pathname;
+                                    var post_id = url.substring(url.lastIndexOf('/') + 1);
+
+                                    $.ajax({
+                                        type: 'POST',
+                                        url: url,
+                                        data: {
+                                            body: body,
+                                            post_id: post_id
+                                        },
+                                        success: function (response) {
+                                            if (response.code === 200) {
+                                                $('#resultMessage').html('<div class="alert alert-success" role="alert">Commented successfully!</div>');
+                                                // go to the discussion page
+                                                setTimeout(function () {
+                                                    window.location.href = url;
+                                                }, 1000);
+    
+                                            } else {
+                                                $('#resultMessage').html('<div class="alert alert-danger" role="alert">Error: ' + response.message + '</div>');
+                                            }
+                                        },
+                                        error: function () {
+                                            $('#resultMessage').html('<div class="alert alert-danger" role="alert">An error occurred. Please try again later.</div>');
+                                        }
+                                    });
+                                });
+                            });
+                        </script>
+
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="ModalReply" aria-hidden="true" aria-labelledby="ModalToggleLabel" tabindex="-1">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="ModalToggleLabel">Post a Reply</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group mb-4">
-                                <label for="comment-body" class="mt-1 mb-3">Your Reply:</label>
-                                <textarea id="comment-body" name="comment-body" class="form-control" rows="5" placeholder="Write your reply here..." required></textarea>
-                            </div>
-                            <div class="form-group commentbtn">
-                                <button type="button" class="btn btn-secondary bg-gradient text-white mb-2" id="replyBtn">Submit Reply</button>
-                            </div>
-                        </form>
+        
                     </div>
                 </div>
             </div>
@@ -182,7 +206,7 @@
                     var now = moment();
                     var diffInHours_{{ post.id }} = now.diff(momentTimestamp_{{ post.id }}, 'hours');
                     var element_{{ post.id }} = document.getElementById('humanTimestamp_{{ post.id }}');
-        
+
                     if (diffInHours_{{ post.id }} < 24) {
                         element_{{ post.id }}.textContent = momentTimestamp_{{ post.id }}.fromNow();
                     } else {
